--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,18 @@
-#root, html, body {
-    height: 100vh;
+#root,
+html,
+body {
+  height: 100vh;
 }
 
 body {
-    margin: 0;
-    background-color: whitesmoke;
+  margin: 0;
+  background-color: rgb(134, 210, 210);
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
